parser.output
   0  $accept : %entry% $end

   1  program : package_decl import_decls type_decls var_decls func_decls struct_func_decls

   2  package_decl : PACKAGE IDENT

   3  import_decls :
   4               | import_decls import_decl

   5  import_decl : IMPORT STRING_LIT

   6  type_decls : type_decls type_decl

   7  type_decl : TYPE IDENT STRUCT LBRACE field_list RBRACE
   8            | TYPE IDENT ASSIGN type_expr

   9  field_list :
  10             | field_list field_decl

  11  field_decl : modifier IDENT type_expr opt_default

  12  modifier : PRIVATE
  13           | MUT
  14           | FINAL
  15           | LATE

  16  opt_default :
  17              | ASSIGN expr

  18  var_decls : var_decls var_decl

  19  var_decl : CONST type_expr IDENT ASSIGN expr
  20           | type_expr IDENT ASSIGN expr
  21           | CONST IDENT DECL_ASSIGN expr
  22           | IDENT DECL_ASSIGN expr

  23  func_decls : func_decls func_decl

  24  func_decl : FUNC IDENT LPAREN params RPAREN return_types LBRACE stmts RBRACE

  25  params :
  26         | params_list

  27  params_list : params_list COMMA param
  28              | param

  29  param : IDENT type_expr
  30        | IDENT TRIPLEDOT type_expr

  31  return_types :
  32               | type_expr_list

  33  type_expr_list : type_expr
  34                 | type_expr_list COMMA type_expr

  35  struct_func_decls : struct_func_decls struct_func_decl

  36  struct_func_decl : FUNC LPAREN IDENT type_expr RPAREN IDENT LPAREN params RPAREN return_types LBRACE stmts RBRACE

  37  stmts :
  38        | stmts stmt

  39  stmt : expr
  40       | var_decl
  41       | IF expr LBRACE stmts RBRACE else_block
  42       | FOR opt_stmt SEMICOLON opt_expr SEMICOLON opt_expr LBRACE stmts RBRACE
  43       | WHILE expr LBRACE stmts RBRACE
  44       | RETURN expr_list

  45  else_block : ELSE LBRACE stmts RBRACE
  46             | ELSE IF expr LBRACE stmts RBRACE else_block

  47  opt_stmt :
  48           | var_decl

  49  opt_expr :
  50           | expr

  51  expr_list : expr
  52            | expr COMMA expr_list

  53  expr : expr PLUS expr
  54       | expr MINUS expr
  55       | expr MULT expr
  56       | expr DIV expr
  57       | expr MOD expr
  58       | expr LSHIFT expr
  59       | expr RSHIFT expr
  60       | expr BITXOR expr
  61       | expr BITOR expr
  62       | expr BITAND expr
  63       | expr EQ expr
  64       | expr NEQ expr
  65       | expr LT expr
  66       | expr LE expr
  67       | expr GT expr
  68       | expr GE expr
  69       | expr AND expr
  70       | expr OR expr
  71       | expr ASSIGN expr
  72       | expr DECL_ASSIGN expr
  73       | expr PLUS_ASSIGN expr
  74       | expr MINUS_ASSIGN expr
  75       | expr TIMES_ASSIGN expr
  76       | expr DIV_ASSIGN expr
  77       | expr MOD_ASSIGN expr
  78       | expr LSHIFT_ASSIGN expr
  79       | expr RSHIFT_ASSIGN expr
  80       | expr BITAND_ASSIGN expr
  81       | expr BITXOR_ASSIGN expr
  82       | expr BITOR_ASSIGN expr
  83       | BITNOT expr
  84       | NOT expr
  85       | INC expr
  86       | DEC expr
  87       | IDENT DOUBLECOLON IDENT
  88       | IDENT LBRACKET expr RBRACKET
  89       | IDENT LBRACKET expr COLON expr RBRACKET
  90       | IDENT LBRACKET expr COLON RBRACKET
  91       | IDENT LPAREN expr_list RPAREN
  92       | IDENT DOT IDENT LPAREN expr_list RPAREN
  93       | type_expr LPAREN expr RPAREN
  94       | LBRACKET expr RBRACKET type_expr LBRACE expr_list RBRACE
  95       | IDENT LBRACE field_expr_list RBRACE
  96       | LBRACKET RBRACKET type_expr LBRACE expr_list RBRACE
  97       | LPAREN expr RPAREN
  98       | INT_LIT
  99       | BOOL_LIT
 100       | CHAR_LIT
 101       | FLOAT_LIT
 102       | STRING_LIT
 103       | NULL
 104       | BREAK
 105       | CONTINUE

 106  type_expr : primitive_type
 107            | LBRACKET expr RBRACKET type_expr
 108            | LBRACKET RBRACKET type_expr
 109            | IDENT

 110  field_expr_list : expr COLON expr
 111                  | expr COLON expr COMMA field_expr_list

 112  primitive_type : BOOL
 113                 | STRING
 114                 | U8
 115                 | U16
 116                 | U32
 117                 | U64
 118                 | I8
 119                 | I16
 120                 | I32
 121                 | I64
 122                 | F32
 123                 | F64
 124                 | ERROR

 125  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (125)

	PACKAGE  shift 3
	.  error

	program  goto 4
	package_decl  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	package_decl : PACKAGE . IDENT  (2)

	IDENT  shift 6
	.  error


state 4
	%entry% : '\001' program .  (125)

	.  reduce 125


state 5
	program : package_decl . import_decls type_decls var_decls func_decls struct_func_decls  (1)
	import_decls : .  (3)

	.  reduce 3

	import_decls  goto 7


state 6
	package_decl : PACKAGE IDENT .  (2)

	.  reduce 2


state 7
	program : package_decl import_decls . type_decls var_decls func_decls struct_func_decls  (1)
	import_decls : import_decls . import_decl  (4)

	IMPORT  shift 8
	.  error

	type_decls  goto 9
	import_decl  goto 10


state 8
	import_decl : IMPORT . STRING_LIT  (5)

	STRING_LIT  shift 11
	.  error


state 9
	program : package_decl import_decls type_decls . var_decls func_decls struct_func_decls  (1)
	type_decls : type_decls . type_decl  (6)

	TYPE  shift 12
	.  error

	var_decls  goto 13
	type_decl  goto 14


state 10
	import_decls : import_decls import_decl .  (4)

	.  reduce 4


state 11
	import_decl : IMPORT STRING_LIT .  (5)

	.  reduce 5


state 12
	type_decl : TYPE . IDENT STRUCT LBRACE field_list RBRACE  (7)
	type_decl : TYPE . IDENT ASSIGN type_expr  (8)

	IDENT  shift 15
	.  error


state 13
	program : package_decl import_decls type_decls var_decls . func_decls struct_func_decls  (1)
	var_decls : var_decls . var_decl  (18)

	CONST  shift 16
	ERROR  shift 17
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	LBRACKET  shift 30
	IDENT  shift 31
	.  error

	func_decls  goto 32
	type_expr  goto 33
	var_decl  goto 34
	primitive_type  goto 35


state 14
	type_decls : type_decls type_decl .  (6)

	.  reduce 6


state 15
	type_decl : TYPE IDENT . STRUCT LBRACE field_list RBRACE  (7)
	type_decl : TYPE IDENT . ASSIGN type_expr  (8)

	STRUCT  shift 36
	ASSIGN  shift 37
	.  error


state 16
	var_decl : CONST . type_expr IDENT ASSIGN expr  (19)
	var_decl : CONST . IDENT DECL_ASSIGN expr  (21)

	ERROR  shift 17
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	LBRACKET  shift 30
	IDENT  shift 38
	.  error

	type_expr  goto 39
	primitive_type  goto 35


state 17
	primitive_type : ERROR .  (124)

	.  reduce 124


state 18
	primitive_type : BOOL .  (112)

	.  reduce 112


state 19
	primitive_type : STRING .  (113)

	.  reduce 113


state 20
	primitive_type : U8 .  (114)

	.  reduce 114


state 21
	primitive_type : U16 .  (115)

	.  reduce 115


state 22
	primitive_type : U32 .  (116)

	.  reduce 116


state 23
	primitive_type : U64 .  (117)

	.  reduce 117


state 24
	primitive_type : I8 .  (118)

	.  reduce 118


state 25
	primitive_type : I16 .  (119)

	.  reduce 119


state 26
	primitive_type : I32 .  (120)

	.  reduce 120


state 27
	primitive_type : I64 .  (121)

	.  reduce 121


state 28
	primitive_type : F32 .  (122)

	.  reduce 122


state 29
	primitive_type : F64 .  (123)

	.  reduce 123


state 30
	type_expr : LBRACKET . expr RBRACKET type_expr  (107)
	type_expr : LBRACKET . RBRACKET type_expr  (108)

	BREAK  shift 40
	CONTINUE  shift 41
	ERROR  shift 17
	NULL  shift 42
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	BITNOT  shift 43
	NOT  shift 44
	INC  shift 45
	DEC  shift 46
	LPAREN  shift 47
	LBRACKET  shift 48
	RBRACKET  shift 49
	INT_LIT  shift 50
	BOOL_LIT  shift 51
	CHAR_LIT  shift 52
	FLOAT_LIT  shift 53
	STRING_LIT  shift 54
	IDENT  shift 55
	.  error

	type_expr  goto 56
	expr  goto 57
	primitive_type  goto 35


state 31
	var_decl : IDENT . DECL_ASSIGN expr  (22)
	type_expr : IDENT .  (109)

	DECL_ASSIGN  shift 58
	IDENT  reduce 109


state 32
	program : package_decl import_decls type_decls var_decls func_decls . struct_func_decls  (1)
	func_decls : func_decls . func_decl  (23)

	FUNC  shift 59
	.  error

	struct_func_decls  goto 60
	func_decl  goto 61


state 33
	var_decl : type_expr . IDENT ASSIGN expr  (20)

	IDENT  shift 62
	.  error


state 34
	var_decls : var_decls var_decl .  (18)

	.  reduce 18


state 35
	type_expr : primitive_type .  (106)

	.  reduce 106


state 36
	type_decl : TYPE IDENT STRUCT . LBRACE field_list RBRACE  (7)

	LBRACE  shift 63
	.  error


state 37
	type_decl : TYPE IDENT ASSIGN . type_expr  (8)

	ERROR  shift 17
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	LBRACKET  shift 30
	IDENT  shift 64
	.  error

	type_expr  goto 65
	primitive_type  goto 35


state 38
	var_decl : CONST IDENT . DECL_ASSIGN expr  (21)
	type_expr : IDENT .  (109)

	DECL_ASSIGN  shift 66
	IDENT  reduce 109


state 39
	var_decl : CONST type_expr . IDENT ASSIGN expr  (19)

	IDENT  shift 67
	.  error


state 40
	expr : BREAK .  (104)

	.  reduce 104


state 41
	expr : CONTINUE .  (105)

	.  reduce 105


state 42
	expr : NULL .  (103)

	.  reduce 103


state 43
	expr : BITNOT . expr  (83)

	BREAK  shift 40
	CONTINUE  shift 41
	ERROR  shift 17
	NULL  shift 42
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	BITNOT  shift 43
	NOT  shift 44
	INC  shift 45
	DEC  shift 46
	LPAREN  shift 47
	LBRACKET  shift 48
	INT_LIT  shift 50
	BOOL_LIT  shift 51
	CHAR_LIT  shift 52
	FLOAT_LIT  shift 53
	STRING_LIT  shift 54
	IDENT  shift 55
	.  error

	type_expr  goto 56
	expr  goto 68
	primitive_type  goto 35


state 44
	expr : NOT . expr  (84)

	BREAK  shift 40
	CONTINUE  shift 41
	ERROR  shift 17
	NULL  shift 42
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	BITNOT  shift 43
	NOT  shift 44
	INC  shift 45
	DEC  shift 46
	LPAREN  shift 47
	LBRACKET  shift 48
	INT_LIT  shift 50
	BOOL_LIT  shift 51
	CHAR_LIT  shift 52
	FLOAT_LIT  shift 53
	STRING_LIT  shift 54
	IDENT  shift 55
	.  error

	type_expr  goto 56
	expr  goto 69
	primitive_type  goto 35


state 45
	expr : INC . expr  (85)

	BREAK  shift 40
	CONTINUE  shift 41
	ERROR  shift 17
	NULL  shift 42
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	BITNOT  shift 43
	NOT  shift 44
	INC  shift 45
	DEC  shift 46
	LPAREN  shift 47
	LBRACKET  shift 48
	INT_LIT  shift 50
	BOOL_LIT  shift 51
	CHAR_LIT  shift 52
	FLOAT_LIT  shift 53
	STRING_LIT  shift 54
	IDENT  shift 55
	.  error

	type_expr  goto 56
	expr  goto 70
	primitive_type  goto 35


state 46
	expr : DEC . expr  (86)

	BREAK  shift 40
	CONTINUE  shift 41
	ERROR  shift 17
	NULL  shift 42
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	BITNOT  shift 43
	NOT  shift 44
	INC  shift 45
	DEC  shift 46
	LPAREN  shift 47
	LBRACKET  shift 48
	INT_LIT  shift 50
	BOOL_LIT  shift 51
	CHAR_LIT  shift 52
	FLOAT_LIT  shift 53
	STRING_LIT  shift 54
	IDENT  shift 55
	.  error

	type_expr  goto 56
	expr  goto 71
	primitive_type  goto 35


state 47
	expr : LPAREN . expr RPAREN  (97)

	BREAK  shift 40
	CONTINUE  shift 41
	ERROR  shift 17
	NULL  shift 42
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	BITNOT  shift 43
	NOT  shift 44
	INC  shift 45
	DEC  shift 46
	LPAREN  shift 47
	LBRACKET  shift 48
	INT_LIT  shift 50
	BOOL_LIT  shift 51
	CHAR_LIT  shift 52
	FLOAT_LIT  shift 53
	STRING_LIT  shift 54
	IDENT  shift 55
	.  error

	type_expr  goto 56
	expr  goto 72
	primitive_type  goto 35


state 48
	expr : LBRACKET . expr RBRACKET type_expr LBRACE expr_list RBRACE  (94)
	expr : LBRACKET . RBRACKET type_expr LBRACE expr_list RBRACE  (96)
	type_expr : LBRACKET . expr RBRACKET type_expr  (107)
	type_expr : LBRACKET . RBRACKET type_expr  (108)

	BREAK  shift 40
	CONTINUE  shift 41
	ERROR  shift 17
	NULL  shift 42
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	BITNOT  shift 43
	NOT  shift 44
	INC  shift 45
	DEC  shift 46
	LPAREN  shift 47
	LBRACKET  shift 48
	RBRACKET  shift 73
	INT_LIT  shift 50
	BOOL_LIT  shift 51
	CHAR_LIT  shift 52
	FLOAT_LIT  shift 53
	STRING_LIT  shift 54
	IDENT  shift 55
	.  error

	type_expr  goto 56
	expr  goto 74
	primitive_type  goto 35


state 49
	type_expr : LBRACKET RBRACKET . type_expr  (108)

	ERROR  shift 17
	BOOL  shift 18
	STRING  shift 19
	U8  shift 20
	U16  shift 21
	U32  shift 22
	U64  shift 23
	I8  shift 24
	I16  shift 25
	I32  shift 26
	I64  shift 27
	F32  shift 28
	F64  shift 29
	LBRACKET  shift 30
	IDENT  shift 64
	.  error

	type_expr  goto 75
	primitive_type  goto 35


state 50
	expr : INT_LIT .  (98)

	.  reduce 98


state 51
	expr : BOOL_LIT .  (99)

	.  reduce 99


state 52
	expr : CHAR_LIT .  (100)

	.  reduce 100


state 53
	expr : FLOAT_LIT .  (101)

	.  reduce 101


state 54
	expr : STRING_LIT .  (102)

	.  reduce 102


55: shift/reduce conflict (shift 77, reduce 109) on LPAREN
state 55
	expr : IDENT . DOUBLECOLON IDENT  (87)
	expr : IDENT . LBRACKET expr RBRACKET  (88)
	expr : IDENT . LBRACKET expr COLON expr RBRACKET  (89)
	expr : IDENT . LBRACKET expr COLON RBRACKET  (90)
	expr : IDENT . LPAREN expr_list RPAREN  (91)
	expr : IDENT . DOT IDENT LPAREN expr_list RPAREN  (92)
	expr : IDENT . LBRACE field_expr_list RBRACE  (95)
	type_expr : IDENT .  (109)

	DOUBLECOLON  shift 76
	LPAREN  shift 77
	LBRACE  shift 78
	LBRACKET  shift 79
	DOT  shift 80


state 56
	expr : type_expr . LPAREN expr RPAREN  (93)

	LPAREN  shift 81
	.  error


state 57
	expr : expr . PLUS expr  (53)
	expr : expr . MINUS expr  (54)
	expr : expr . MULT expr  (55)
	expr : expr . DIV expr  (56)
	expr : expr . MOD expr  (57)
	expr : expr . LSHIFT expr  (58)
	expr : expr . RSHIFT expr  (59)
	expr : expr . BITXOR expr  (60)
	expr : expr . BITOR expr  (61)
	expr : expr . BITAND expr  (62)
	expr : expr . EQ expr  (63)
	expr : expr . NEQ expr  (64)
	expr : expr . LT expr  (65)
	expr : expr . LE expr  (66)
	expr : expr . GT expr  (67)
	expr : expr . GE expr  (68)
	expr : expr . AND expr  (69)
	expr : expr . OR expr  (70)
	expr : expr . ASSIGN expr  (71)
	expr : expr . DECL_ASSIGN expr  (72)
	expr : expr . PLUS_ASSIGN expr  (73)
	expr : expr . MINUS_ASSIGN expr  (74)
	expr : expr . TIMES_ASSIGN expr  (75)
	expr : expr . DIV_ASSIGN expr  (76)
	expr : expr . MOD_ASSIGN expr  (77)
	expr : expr . LSHIFT_ASSIGN expr  (78)
	expr : expr . RSHIFT_ASSIGN expr  (79)
	expr : expr . BITAND_ASSIGN expr  (80)
	expr : expr . BITXOR_ASSIGN expr  (81)
	expr : expr . BITOR_ASSIGN expr  (82)
	type_expr : LBRACKET expr . RBRACKET type_expr  (107)

	PLUS  shift 82
	MINUS  shift 83
	DIV  shift 84
	MULT  shift 85
	MOD  shift 86
	LSHIFT  shift 87
	RSHIFT  shift 88
	BITXOR  shift 89
	BITOR  shift 90
	BITAND  shift 91
	ASSIGN  shift 92
	PLUS_ASSIGN  shift 93
	MINUS_ASSIGN  shift 94
	TIMES_ASSIGN  shift 95
	DIV_ASSIGN  shift 96
	MOD_ASSIGN  shift 97
	DECL_ASSIGN  shift 98
	LSHIFT_ASSIGN  shift 99
	RSHIFT_ASSIGN  shift 100
	BITAND_ASSIGN  shift 101
	BITXOR_ASSIGN  shift 102
	BITOR_ASSIGN  shift 103
	EQ  shift 104
	NEQ  shift 105
	LT  shift 106
	LE  shift 107
	GT  shift 108
	GE  shift 109
	AND  shift 110
	OR  shift 111
	RBRACKET  shift 112
	.  error


state 58
	var_decl : IDENT DECL_ASSIGN . expr  (22)
